--- a/core/templates/lineas_accion_3.html
+++ b/core/templates/lineas_accion_3.html
@@ -7,21 +7,18 @@
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p style="font-size: 24px; color: #005fab">Línea de Acción 1</p>
+    <p style="font-size: 24px; color: #005fab">Línea de Acción 3</p>
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p class="responsive-text" style="text-align: left"><strong>Acciones con perspectiva de género</strong><br>
-        Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
-        en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
-        conclusiones referentes a la utilidad de los resultados por género, escritura con lenguaje sensible 
-        al género, estrategia de comunicación que evite estereotipos y actividades formativas y de capacitación 
-        con perspectiva de género.   
+    <p class="responsive-text" style="text-align: left"><strong>Financiamiento y Patrocinio I+D+i+e</strong><br>
+    Los indicadores correspondientes a este ítem, hacen referencia a los montos en el 
+    financiamiento y patrocinio adjudicados en el área de I+D+i+e.    
     </p>
     <br>
     <hr style="border-top: 1px solid #000"> 
     <br>
-    {% comment %} <p class="responsive-text" style="text-align: center"><strong>Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</strong></p>
+    <p class="responsive-text" style="text-align: center"><strong>Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</strong></p>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
@@ -32,7 +29,7 @@
     <p style="text-align: center" class="responsive-text"><em>
     Fuente: Elaboración propia, a partir de las bases de datos de ANID 
     Proyectos (bdh_proyectos_2003_2022 y bdh_proyectos_2003_2023)
-    </em></p> {% endcomment %}
+    </em></p>
 </div>
 
 <div class="container-fluid">
