--- a/core/templates/lineas_accion_4.html
+++ b/core/templates/lineas_accion_4.html
@@ -7,16 +7,14 @@
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p style="font-size: 24px; color: #005fab">Línea de Acción 1</p>
+    <p style="font-size: 24px; color: #005fab">Línea de Acción 4</p>
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p class="responsive-text" style="text-align: left"><strong>Acciones con perspectiva de género</strong><br>
-        Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
-        en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
-        conclusiones referentes a la utilidad de los resultados por género, escritura con lenguaje sensible 
-        al género, estrategia de comunicación que evite estereotipos y actividades formativas y de capacitación 
-        con perspectiva de género.   
+    <p class="responsive-text" style="text-align: left"><strong>Capital Humano</strong><br>
+        Los indicadores correspondientes a este ítem, guardan relación con la Jornada Completa 
+        Equivalente (JCE), la diferencia en el salario promedio anual entre hombres y mujeres 
+        y datos provenientes de la Dirección Académica de Postgrado (DAP).
     </p>
     <br>
     <hr style="border-top: 1px solid #000"> 
@@ -33,14 +31,6 @@
     Fuente: Elaboración propia, a partir de las bases de datos de ANID 
     Proyectos (bdh_proyectos_2003_2022 y bdh_proyectos_2003_2023)
     </em></p> {% endcomment %}
-</div>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8">
-        {{ chart2|safe }}
-        </div>
-    </div>  
 </div>
 <br>
 <br>
