--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 {% include 'banner_home.html' %}
-  <div class="uk-container">
+  <div class="container-lg text-center dark:bg-indigo-950 dark:text-white">
   {% comment %} <div class="container" style="width: 85%; height: auto; background-color: #ffffff">
     <div class="container px-5" style="font-family: 'Roboto', sans-serif; font-size: 20px; color: #4d4d4d; font-weight: 300"> {% endcomment %}
       <br>
@@ -29,9 +29,11 @@
       </p>
       <br>
       <br>
-
   </div>
   <div class="container-fluid p-0 m-0">
     <img src="{% static 'img/superbanner_home.jpg' %}" class="img-fluid" alt="Responsive image" />
   </div>
+
+  
+  
 {% endblock %}   
