--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,11 +1,10 @@
 {% load static %}
-
-<footer class="bg-indigo-300 shadow dark:bg-gray-900">
+<footer class="bg-indigo-300 shadow">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse" style="text-decoration: none;">
                 <img src="{% static 'img/logo_ines.png' %}" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Observatorio<br>Género y Ciencia</span>
+                <span class="self-center text-2xl text-gray-500 font-semibold whitespace-nowrap">Observatorio<br>Género y Ciencia</span>
             </a>
             <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400" style="text-decoration: none;">
                 <li>
@@ -22,10 +21,11 @@
                 </li>
             </ul>
         </div>
-        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© Observatorio Género y Ciencia 2024 Todos los derechos reservados</span>
+        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
+        <span class="block text-sm text-gray-500 sm:text-center">© Observatorio Género y Ciencia 2024 Todos los derechos reservados</span>
     </div>
 </footer>
+
 
 
 
