--- a/core/templates/repositorio.html
+++ b/core/templates/repositorio.html
@@ -49,8 +49,8 @@
 </div>  
 <br>
 <br>
-<div class="container">
-    <div id="accordion-flush" data-accordion="collapse" data-active-classes="bg-white dark:bg-gray-900 text-gray-900 dark:text-white" data-inactive-classes="text-gray-500 dark:text-gray-400">
+<div class="container mx-auto px-4 sm:px-6 lg:px-8" style="width: 1140px;">
+    <div id="accordion-flush mx-auto" data-accordion="collapse" data-active-classes="bg-white text-gray-900" data-inactive-classes="text-gray-500">
     <h2 id="accordion-flush-heading-1">
         <button type="button" class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
         <span>Reportes</span>
@@ -65,7 +65,7 @@
             <ol class="relative border-s border-gray-200 dark:border-gray-700">                  
                 <li class="mb-10 ms-6">            
                     <span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900">
-                        <svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <svg class="w-2.5 h-2.5 text-blue-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                         </svg>
                     </span>
@@ -135,10 +135,14 @@
         </ul>
         </div>
     </div> {% endcomment %}
+
+    
+
     </div>
 </div>
 <br>
 <br>
+  
 
 
 {% comment %} <script src="uikit/dist/js/uikit-icons.min.js"></script> {% endcomment %}
