--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %}{% load tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,107 +12,114 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     
-    <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit-icons.min.js"></script>
-
     <!-- Plotly CDN JS -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"  rel="stylesheet" />
-
-    
     <!--Favicon-->
     <link rel="icon" href="{% static 'img/estadisticas.png' %}" type="image/png" sizes="16x16">
 
+    <link rel="stylesheet" href="{% static 'css/dist/styles.css' %}">
+
     <link rel="stylesheet" href="{% static 'css/style_base.css' %}">
-    {% comment %} <style>
-      /* Estilo adicional para personalizar */
-
-      .card {
-        margin-bottom: 20px;
-        color: #005fab;
-        background-color: #fff; /* Fondo blanco para la tarjeta */
-        border-color: #005fab!important; /* Borde de la tarjeta */
-      }
-
-      .card:hover {
-        background-color: #005fab; /* Cambia el color de fondo al azul al pasar el mouse */
-        color: #fff; /* Cambia el color del texto a blanco al pasar el mouse */
-      }
-      
-      .btn {
-        background-color: #fff!important; /* Fondo blanco para el botón */
-        border-color: #005fab!important; /* Borde del botón */
-        color: #005fab!important; /* Color del texto del botón */
-        text-decoration: none;
-      }
-
-      .btn:hover {
-        background-color: #fff!important; /* Cambia el fondo del botón a azul al pasar el mouse */
-        border-color: #005fab!important; /* Cambia el color del borde a blanco al pasar el mouse */
-        color: #005fab!important; /* Cambia el color del texto a blanco al pasar el mouse */
-        text-decoration: none;
-      }
-
-      .responsive-text {
-        font-size: 24px;
-        font-weight: 300;
-      }
-
-      .uk-navbar-container {
-        background-color: #fff!important;
-      }
-
-      nav li {
-        display: inline-block; /* Muestra los elementos de la lista como bloques en línea */
-        margin: 0 10px; /* Agrega espacio entre elementos de la lista */
-      }
-      
-
-      nav li a {
-        color: #005fab!important; /* Color de la tipografía */
-        text-decoration: none; /* Elimina el subrayado predeterminado */
-        font-family: 'Roboto', sans-serif; /* Familia de fuentes */
-        font-size: 14px; /* Tamaño de la fuente */
-      }
-
-      em {
-        color: inherit; /* O cualquier otro color deseado */
-    }
-      
-      @media (max-width: 480px) {
-        .responsive-text {
-          font-size: 14px;
-          text-align: justify;
-        }
-
-        .plotly-div {
-          width: 100%!important;
-          height: 100%;
-        }
-      }
-    </style>  {% endcomment %}
-
-{% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
-{% bootstrap_messages %}
     
+{% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
+{% bootstrap_messages %}{% tailwind_css %}
+
     <title>Observatorio Género y Ciencia</title>
+
+    {% comment %} <script>
+        // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        } else {
+            document.documentElement.classList.remove('dark')
+        }
+    </script>  {% endcomment %}
+    
 </head>
-<body>
+<body class="bg-indigo-200 dark:bg-indigo-950">
 
 <!-- Alerta -->
-<div class="container-fluid p-0 m-0 text-center bg-indigo-300" style="color: #4d4d4d;">
+<div class="md:container md:mx-auto p-0 m-0 text-center bg-indigo-400 dark:bg-indigo-950" style="color: #4d4d4d;">
   <div style="height: 5px;"></div>
   Observatorio de género y ciencia UFRO en desarrollo
   <div style="height: 5px;"></div>
 </div>
 
 {% block navbar %}
-
     <!-- NavBar Menu background-color: #d4d4d4!important-->
-    <nav class="uk-navbar-container" uk-navbar data-uk-sticky style="background-color: #B4C6FC!important; font-size: 24px!important">
+    <header class="fixed w-full z-50 left-0 right-0 top-0 bg-indigo-950">
+        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 border-gray-200 px-4 lg:px-6 py-2.5">
+            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+                <a href="https://flowbite.com" class="flex items-center">
+                    <img src="{% static 'img/logo_ines.png' %}" class="brightness-125 mr-3 h-6 sm:h-9" alt="InES Género Logo" />
+                    <span class="self-center text- font-semibold whitespace-nowrap dark:text-white">Observatorito<br>Género y Ciencia</span>
+                </a> 
+                <div class="flex items-center lg:order-2">
+                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                        <span class="sr-only">Open main menu</span>
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+                        <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                    </button>
+                    &nbsp;&nbsp;
+                    <button type="button" id="theme-toggle" class="text-white bg-amber-300 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                        <span id="theme-toggle-dark-icon">
+                            <!-- Icono de la luna -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+                            </svg>
+                        </span>
+                        <span id="theme-toggle-light-icon" class="hidden">
+                            <!-- Icono del sol -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+                <div class="hidden justify-between w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
+                    <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+                        <li>
+                            <a href="/" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Inicio</a>
+                        </li>
+                        <!--Dropdown-->
+                        <li>
+                            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-indigo-400 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-indigo-950 md:dark:hover:bg-transparent"><a href="{% url 'lineas_accion' %}" style="text-decoration: none;">Lineas de Acción&nbsp;</a>&nbsp;&nbsp;<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                  </svg></button>
+                            <!-- Dropdown menu -->
+                            <div id="dropdownNavbar" class="z-10 hidden font-normal bg-indigo-400 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                                <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
+                                  <li>
+                                    <a href="{% url 'lineas_accion_1' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Acciones con Perspectiva de Género</a>
+                                  </li>
+                                  <li>
+                                    <a href="{% url 'lineas_accion_2' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Liderazgo Femenini I+D+i+e</a>
+                                  </li>
+                                  <li>
+                                    <a href="{% url 'lineas_accion_3' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Financiamiento y Patrocinio I+D+i+e</a>
+                                  </li>
+                                  <li>
+                                    <a href="{% url 'lineas_accion_4' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Capital Humano</a>
+                                  </li>
+                                </ul>
+    
+                            </div>
+                        </li>
+                        <li>
+                            <a href="{% url 'repositorio' %}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Repositorio</a>
+                        </li>
+                        <li>
+                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    {% comment %} <nav class="uk-navbar-container" uk-navbar data-uk-sticky style="background-color: #B4C6FC!important; font-size: 24px!important">
         <div class="uk-navbar-center">
             <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas" uk-toggle>
                 <span uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">Menu</span>
@@ -127,16 +134,16 @@
                     <div class="uk-navbar-dropdown" style="background-color: #B4C6FC!important">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
                             <li>
-                                <a href="#" style="text-transform: none">Acciones con Perspectiva de Género</a>
+                                <a href="{% url 'lineas_accion_1' %}" style="text-transform: none">Acciones con Perspectiva de Género</a>
                             </li>
                             <li>
-                                <a href="{% url 'lineas_accion_1' %}">Liderazgo Femenino I+D+i+e</a>
+                                <a href="{% url 'lineas_accion_2' %}">Liderazgo Femenino I+D+i+e</a>
                             </li>
                             <li>
-                                <a href="#">Financiamiento y Patrocinio I+D+i+e</a>
+                                <a href="{% url 'lineas_accion_3' %}">Financiamiento y Patrocinio I+D+i+e</a>
                             </li>
                             <li>
-                                <a href="#">Capital Humano</a>
+                                <a href="{% url 'lineas_accion_4' %}">Capital Humano</a>
                             </li>
                         </ul>
                     </div>
@@ -151,7 +158,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> {% endcomment %}
 
     <!-- Offcanvas Menu -->
     <div id="offcanvas" uk-offcanvas>
@@ -164,16 +171,16 @@
                     <a href="{% url 'lineas_accion' %}">Lineas de Acción</a>
                     <ul class="uk-nav-sub">
                         <li>
-                            <a href="#" target="_blank">Acciones con Perspectiva de Género</a>
+                            <a href="{% url 'lineas_accion_1' %}" target="_blank">Acciones con Perspectiva de Género</a>
                         </li>
                         <li>
-                            <a href="{% url 'lineas_accion_1' %}" target="_blank">Liderazgo Femenino I+D+i+e</a>
+                            <a href="{% url 'lineas_accion_2' %}" target="_blank">Liderazgo Femenino I+D+i+e</a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">Financiamiento y Patrocinio I+D+i+e</a>
+                            <a href="{% url 'lineas_accion_3' %}" target="_blank">Financiamiento y Patrocinio I+D+i+e</a>
                         </li>
                         <li>
-                            <a href="#" target="_blank">Capital Humano</a>
+                            <a href="{% url 'lineas_accion_4' %}" target="_blank">Capital Humano</a>
                         </li>
                     </ul>
                 </li>
@@ -187,11 +194,13 @@
         </div>
     </div>
    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
 {% endblock navbar %}
 
 {% block content %}
+
+
+
 {% endblock %}
 
 {% include "footer.html" %}
@@ -199,7 +208,58 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit-icons.min.js"></script>
+
+<script src="stylesheet" href="{% static 'js/darkModeToggle.js' %}" ></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+
+<script>
+    var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
+    var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
+    var body = document.body;
+
+    function applyTheme(theme) {
+        if (theme === 'dark') {
+            body.classList.add('dark');
+        } else {
+            body.classList.remove('dark');
+        }
+    }
+
+    // Cambia los íconos dentro del botón según la configuración de tema
+    function toggleThemeIcon() {
+        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            themeToggleLightIcon.classList.remove('hidden');
+            themeToggleDarkIcon.classList.add('hidden');
+            applyTheme('dark');
+        } else {
+            themeToggleLightIcon.classList.add('hidden');
+            themeToggleDarkIcon.classList.remove('hidden');
+            applyTheme('light');
+        }
+    }
+
+    // Ejecuta la función cuando se carga la página
+    toggleThemeIcon();
+
+    // Agrega un event listener al botón para cambiar el tema y el ícono
+    var themeToggleBtn = document.getElementById('theme-toggle');
+    themeToggleBtn.addEventListener('click', function() {
+        // Cambia el tema en localStorage
+        if (localStorage.getItem('color-theme') === 'dark') {
+            localStorage.setItem('color-theme', 'light');
+            applyTheme('light');
+        } else {
+            localStorage.setItem('color-theme', 'dark');
+            applyTheme('dark');
+        }
+        // Actualiza el ícono
+        toggleThemeIcon();
+    });
+</script>
 
 </body>
 </html>
+
+
+  
