--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -1,22 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <div class="container-fluid p-0 m-0">
-    <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="img-fluid" alt="Responsive image" />
+  <div class="md:container md:mx-auto p-0 m-0 text-center">
+    <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="h-auto max-w-full" alt="Responsive image" />
   </div>  
 
-
-  <div class="uk-container uk-container-expand" style="background-color: #dfdfdf;">
-  <div class="uk-container px-5" style="width: 80%; background-color: #ffffff; margin: 0 auto;"> 
+  <div class="md:container md:mx-auto bg-base-400 dark:bg-indigo-950 p-0 m-0">
+  <div class="container mx-auto bg-base-400 dark:bg-indigo-400" style="width: 80%; margin: 0 auto;"> 
     {% comment %} <div class="uk-container" style="font-family: 'Roboto', sans-serif; color: #4d4d4d; font-weight: 300" > {% endcomment %}
     <br>    
     <br>
-    <div class="uk-container px-5">
-      <hr style="width: 40%; border: 1px solid">
-      <p style="color: #005fab; font-weight: 300" class="responsive-text"><strong>Líneas<br> de Acción</strong></p>
-      <hr style="width: 40%; border: 1px solid">
+    <div class="container mx-auto px-5">
       <br>
-      <p class="responsive-text">
+      <br>
+      <hr style="border-top: 1px solid #000; width: 50%;">
+      <br>
+      <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1></p>
+      <br>
+      <hr style="border-top: 1px solid #000; width: 50%;">
+      <br>
+      
+      {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p> {% endcomment %}
+
+      <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
         El observatorio de Género y Ciencia agrupa el total de los indicadores en Líneas
         de Acción con el fin de monitorearlos de forma ordenada permitiendo así, una
         correcta y eficiente sistematización, análisis y reporte de las actividades a
@@ -25,66 +31,54 @@
     </div>
     <br>
     <br>
-    <br>
-    <br>
-    <div class="uk-container px-5">
-        <div class="row">
+    <div class="container-lg px-5">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
           <!-- Segunda fila -->
           <div class="col">
-            <div class="card rounded-0">
-              <div class="card-body">
-                <br><strong>
+            <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
+              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">
                 Acciones con<br>
-                Perspectiva de género</strong><br>
-                <br>
-                <a href="#" class="btn btn-outline-primary rounded-0" type="button">Ver Más</a>
-              </div>
-            </div>
+                Perspectiva de género<br>
+              </h5>
+              <br>
+              <a href="{% url 'lineas_accion_1' %}" class="animate-pulse text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>
+            </div>  
           </div>
           <div class="col">
-            <div class="card rounded-0">
-              <div class="card-body">
-                <br><strong>
+            <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"> 
                 Liderazgo Femenino<br>
-                I+D+i+e</strong><br>
-                <br>
-                <a href="{% url 'lineas_accion_1' %}" class="btn btn-outline-primary rounded-0" type="button">Ver Más</a>
-              </div>
+                I+D+i+e
+              </h5>
+              <br>
+              <a href="{% url 'lineas_accion_2' %}" class="animate-pulse text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>
             </div>
+        </div>
+        <div class="col">
+          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">  
+              Financiamiento<br>
+              y Patrocionio I+D+i+e<br>
+            </h5>
+            <br>
+            <a href="{% url 'lineas_accion_3' %}" class="animate-pulse text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>            
           </div>
         </div>
-        <div class="row">
-          <!-- Segunda fila -->
-          <div class="col">
-            <div class="card rounded-0">
-              <div class="card-body">
-                <br><strong>
-                Financiamiento<br>
-                y Patrocionio I+D+i+e</strong><br>
-                <br>
-                <a href="#" class="btn btn-outline-primary rounded-0" type="button">Ver Más</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card rounded-0">
-              <div class="card-body">
-                <br><strong>
-                Capital Humano</strong><br>
-                <br>
-                <br>
-                <a href="#" class="btn btn-outline-primary rounded-0" type="button">Ver Más</a>
-              </div>
-            </div>
+        <div class="col">
+          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">
+              Capital<br>Humano<br>
+            </h5>
+            <br>
+            <a href="{% url 'lineas_accion_4' %}" class="animate-pulse text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a> 
           </div>
         </div>
-      </div>
-      <br>
-      <br>
+    </div>
+    <br>
+    <br>
     </div>
   </div>
   </div>
-
   <script>
     // Ajustar el tamaño del gráfico cuando cambia el tamaño de la ventana
     window.addEventListener('resize', function() {
@@ -95,4 +89,6 @@
     });
   </script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+
 {% endblock content %}
