--- a/theme/templates/lineas_accion_4.html
+++ b/theme/templates/lineas_accion_4.html
@@ -2,21 +2,19 @@
 {% load static %}
 {% block content %}
 {% include 'banner_lineas.html' %}
-<div class="container-lg" style="font-family: 'Roboto', sans-serif; color: #4d4d4d">
+<div class="container-lg dark:bg-indigo-950" style="font-family: 'Roboto', sans-serif; color: #4d4d4d">
     <br>
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p style="font-size: 24px; color: #005fab">Línea de Acción 1</p>
+    <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 4</span></h1></p>
     <br>
     <hr style="border-top: 1px solid #000; width: 50%">
     <br>
-    <p class="responsive-text" style="text-align: left"><strong>Acciones con perspectiva de género</strong><br>
-        Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
-        en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
-        conclusiones referentes a la utilidad de los resultados por género, escritura con lenguaje sensible 
-        al género, estrategia de comunicación que evite estereotipos y actividades formativas y de capacitación 
-        con perspectiva de género.   
+    <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400"><strong>Capital Humano</strong><br>
+        Los indicadores correspondientes a este ítem, guardan relación con la Jornada Completa 
+        Equivalente (JCE), la diferencia en el salario promedio anual entre hombres y mujeres 
+        y datos provenientes de la Dirección Académica de Postgrado (DAP).
     </p>
     <br>
     <hr style="border-top: 1px solid #000"> 
@@ -33,18 +31,8 @@
     Fuente: Elaboración propia, a partir de las bases de datos de ANID 
     Proyectos (bdh_proyectos_2003_2022 y bdh_proyectos_2003_2023)
     </em></p> {% endcomment %}
+    <br>
+    <br>
 </div>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8">
-        {{ chart2|safe }}
-        </div>
-    </div>  
-</div>
-<br>
-<br>
 {% include 'nav_lineas.html' %}
-<br>
-<br>
 {% endblock content %}
