mejoras en dark theme

--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center">© Observatorio Género y Ciencia 2024, Todos los derechos reservados</span>
+        <span class="block text-sm text-gray-500 sm:text-center">© Observatorio Género y Ciencia 2024, Universidad de La Frontera<br>Todos los derechos reservados</span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
               <a href="https://www.linkedin.com/in/generoencienciaufro/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40">
