--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -48,29 +48,31 @@
 
 {% block navbar %}
     <!-- NavBar Menu background-color: #d4d4d4!important-->
-    <header class="fixed w-full z-50 left-0 right-0 top-0 bg-indigo-950">
-        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 border-gray-200 px-4 lg:px-6 py-2.5">
+    <header class="fixed w-full z-50 left-0 right-0 top-0">
+        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 dark:text-white border-gray-200 px-4 lg:px-6 py-2.5">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-                <a href="https://flowbite.com" class="flex items-center">
+                <a href="#" class="flex items-center" style="text-decoration: none;">
                     <img src="{% static 'img/logo_ines.png' %}" class="brightness-125 mr-3 h-6 sm:h-9" alt="InES Género Logo" />
                     <span class="self-center text- font-semibold whitespace-nowrap dark:text-white">Observatorito<br>Género y Ciencia</span>
                 </a> 
                 <div class="flex items-center lg:order-2">
-                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                         <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
                     &nbsp;&nbsp;
-                    <button type="button" id="theme-toggle" class="text-white bg-amber-300 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    <button type="button" id="theme-toggle" class="text-white bg-indigo-950 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-indigo-400">
                         <span id="theme-toggle-dark-icon">
                             <!-- Icono de la luna -->
+                             dark
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
                             </svg>
                         </span>
                         <span id="theme-toggle-light-icon" class="hidden">
                             <!-- Icono del sol -->
+                             light
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
                             </svg>
@@ -80,7 +82,7 @@
                 <div class="hidden justify-between w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="/" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Inicio</a>
+                            <a href="/" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Inicio</a>
                         </li>
                         <!--Dropdown-->
                         <li>
@@ -88,29 +90,29 @@
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                   </svg></button>
                             <!-- Dropdown menu -->
-                            <div id="dropdownNavbar" class="z-10 hidden font-normal bg-indigo-400 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+                            <div id="dropdownNavbar" class="z-10 hidden font-normal bg-indigo-400 dark:text-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-indigo-950 dark:divide-gray-600">
                                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                                   <li>
-                                    <a href="{% url 'lineas_accion_1' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Acciones con Perspectiva de Género</a>
+                                    <a href="{% url 'lineas_accion_1' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Acciones con Perspectiva de Género</a>
                                   </li>
                                   <li>
-                                    <a href="{% url 'lineas_accion_2' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Liderazgo Femenini I+D+i+e</a>
+                                    <a href="{% url 'lineas_accion_2' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Liderazgo Femenini I+D+i+e</a>
                                   </li>
                                   <li>
-                                    <a href="{% url 'lineas_accion_3' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Financiamiento y Patrocinio I+D+i+e</a>
+                                    <a href="{% url 'lineas_accion_3' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Financiamiento y Patrocinio I+D+i+e</a>
                                   </li>
                                   <li>
-                                    <a href="{% url 'lineas_accion_4' %}" class="block px-4 py-2 hover:bg-indigo-400 dark:hover:bg-gray-600 dark:hover:text-white">Capital Humano</a>
+                                    <a href="{% url 'lineas_accion_4' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Capital Humano</a>
                                   </li>
                                 </ul>
     
                             </div>
                         </li>
                         <li>
-                            <a href="{% url 'repositorio' %}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Repositorio</a>
+                            <a href="{% url 'repositorio' %}" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Repositorio</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Contacto</a>
                         </li>
                     </ul>
                 </div>
