--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -3,37 +3,38 @@
 {% block content %}
 {% load static %}
 {% include 'banner_home.html' %}
-  <div class="container-lg text-center dark:bg-indigo-950 dark:text-white">
+<div class="container-lg dark:bg-indigo-950 dark:text-white">
   {% comment %} <div class="container" style="width: 85%; height: auto; background-color: #ffffff">
     <div class="container px-5" style="font-family: 'Roboto', sans-serif; font-size: 20px; color: #4d4d4d; font-weight: 300"> {% endcomment %}
-      <br>
-      <br>
-      <br>
-      <p class="responsive-text">
-      El Observatorio de Género y Ciencia de la Universidad de La Frontera tiene<br> 
-      como objetivo principal aportar al desarrollo de capacidades institucionales<br>
-      a través del monitoreo de las acciones de transversalización del enfoque de<br>
-      género desde una perspectiva procedimental y normativa en el ámbito de<br>
-      I+D+i+e de base científica tecnológica en la institución.<br>
-      <br>
-      <strong>Misión</strong><br>
-      Recopilar y analizar datos institucionales de I+D+i+e con perspectiva de<br>
-      género y enfoque interseccional dentro de la Universidad de La Frontera,<br>
-      relevando nuevas formas de incorporar la transversalidad de género a nivel<br>
-      institucional<br>
-      <br>
-      <strong>Visión</strong><br>
-      Observatorio de Género y Ciencia reconocido a nivel nacional e internacional<br>
-      como guía y referente acerca de la instauración de la perspectiva de género<br>
-      en el ámbito de I+D+i+e.
-      </p>
-      <br>
-      <br>
-  </div>
-  <div class="container-fluid p-0 m-0">
-    <img src="{% static 'img/superbanner_home.jpg' %}" class="img-fluid" alt="Responsive image" />
-  </div>
+  <br>
+  <br>
+  <br>
+  <p class="text-xl text-align-left text-gray-500 lg:text-xl dark:text-gray-400">
+    El Observatorio de Género y Ciencia de la Universidad de La Frontera tiene<br> 
+    como objetivo principal aportar al desarrollo de capacidades institucionales<br>
+    a través del monitoreo de las acciones de transversalización del enfoque de<br>
+    género desde una perspectiva procedimental y normativa en el ámbito de<br>
+    I+D+i+e de base científica tecnológica en la institución.<br>
+  <br>
+  <strong>Misión</strong><br>
+    Recopilar y analizar datos institucionales de I+D+i+e con perspectiva de<br>
+    género y enfoque interseccional dentro de la Universidad de La Frontera,<br>
+    relevando nuevas formas de incorporar la transversalidad de género a nivel<br>
+    institucional<br>
+  <br>
+  <strong>Visión</strong><br>
+    Observatorio de Género y Ciencia reconocido a nivel nacional e internacional<br>
+    como guía y referente acerca de la instauración de la perspectiva de género<br>
+    en el ámbito de I+D+i+e.
+  </p>
+  <br>
+  <br>
+</div>
+<div class="container-fluid p-0 m-0 relative">
+  <img src="{% static 'img/superbanner_home.jpg' %}" class="w-full h-auto" alt="Responsive image" />
+</div>   
+{% endblock %}   
+
+
 
   
-  
-{% endblock %}   
