--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -1,41 +1,35 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <div class="md:container md:mx-auto p-0 m-0 text-center">
-    <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="h-auto max-w-full" alt="Responsive image" />
-  </div>  
-
-  <div class="md:container md:mx-auto bg-base-400 dark:bg-indigo-950 p-0 m-0">
-  <div class="container mx-auto bg-base-400 dark:bg-indigo-400" style="width: 80%; margin: 0 auto;"> 
-    {% comment %} <div class="uk-container" style="font-family: 'Roboto', sans-serif; color: #4d4d4d; font-weight: 300" > {% endcomment %}
-    <br>    
-    <br>
-    <div class="container mx-auto px-5">
-      <br>
-      <br>
-      <hr style="border-top: 1px solid #000; width: 50%;">
-      <br>
-      <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1></p>
-      <br>
-      <hr style="border-top: 1px solid #000; width: 50%;">
-      <br>
-      
-      {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p> {% endcomment %}
-
-      <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
-        El observatorio de Género y Ciencia agrupa el total de los indicadores en Líneas
-        de Acción con el fin de monitorearlos de forma ordenada permitiendo así, una
-        correcta y eficiente sistematización, análisis y reporte de las actividades a
-        a cumplir por las distintas Unidades de la Universidad de La Frontera.
-      </p>
-    </div>
-    <br>
-    <br>
+<div class="container-fluid p-0 m-0 text-center">
+  <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="h-auto max-w-full" alt="Responsive image" />
+</div>  
+<div class="container-lg dark:bg-indigo-950 dark:text-white">  
+  <br>    
+  <br>
+  <div class="container mx-auto px-5">
+  <br>
+  <br>
+  <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+  <br>
+  <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1></p>
+  <br>
+  <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+  <br>
+  <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
+    El observatorio de Género y Ciencia agrupa el total de los indicadores en Líneas
+    de Acción con el fin de monitorearlos de forma ordenada permitiendo así, una
+    correcta y eficiente sistematización, análisis y reporte de las actividades a
+    a cumplir por las distintas Unidades de la Universidad de La Frontera.
+  </p>
+</div>
+<br>
+<br>
     <div class="container-lg px-5">
         <div class="row row-cols-1 row-cols-md-2 g-4">
-          <!-- Segunda fila -->
-          <div class="col">
-            <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
+          <!-- primera fila -->
+          <div class="col"> 
+            <div class="max-w-sm p-6 bg-indigo-600 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
               <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">
                 Acciones con<br>
                 Perspectiva de género<br>
@@ -45,7 +39,7 @@
             </div>  
           </div>
           <div class="col">
-            <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <div class="max-w-sm p-6 bg-indigo-600 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
               <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white"> 
                 Liderazgo Femenino<br>
                 I+D+i+e
@@ -54,8 +48,9 @@
               <a href="{% url 'lineas_accion_2' %}" class="animate-pulse text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>
             </div>
         </div>
+        <!--segunda fila-->
         <div class="col">
-          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+          <div class="max-w-sm p-6 bg-indigo-600 border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">  
               Financiamiento<br>
               y Patrocionio I+D+i+e<br>
@@ -65,7 +60,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+          <div class="max-w-sm p-6 bg-indigo-600 dark:bg-indigo-950 border rounded-lg dark:border-gray-700 focus:ring-4 focus:outline-none shadow-xl">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">
               Capital<br>Humano<br>
             </h5>
@@ -76,7 +71,7 @@
     </div>
     <br>
     <br>
-    </div>
+  </div>
   </div>
   </div>
   <script>
