--- a/theme/templates/lineas_accion_1.html
+++ b/theme/templates/lineas_accion_1.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block content %}
 {% include 'banner_lineas.html' %}
-<div class="container-lg dark:bg-indigo-950" style="font-family: 'Roboto', sans-serif; color: #4d4d4d">
+<div class="container-lg dark:bg-indigo-950 dark:text-white" style="font-family: 'Roboto', sans-serif;">
     <br>
     <br>
-    <hr style="border-top: 1px solid #000; width: 50%">
+    <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
-    <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea <br>de Acción 1</span></h1></p>
+    <p style="font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea <br>de Acción 1</span></h1></p>
     <br>
-    <hr style="border-top: 1px solid #000; width: 50%">
+    <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
     <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400"><strong>Acciones con perspectiva de género</strong><br>
         Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
