--- a/theme/templates/lineas_accion_2.html
+++ b/theme/templates/lineas_accion_2.html
@@ -4,14 +4,14 @@
 {% include 'banner_lineas.html' %}
   {% comment %} <div class="container-fluid" style="background-color: #dfdfdf;"> {% endcomment %}
   {% comment %} <div class="container" style="width: 80%; background-color: #ffffff; margin: 0 auto;">  {% endcomment %}
-    <div class="container-lg dark:bg-indigo-950" style="font-family: 'Roboto', sans-serif; color: #4d4d4d">
+    <div class="container-lg dark:bg-indigo-950 dark:text-white" style="font-family: 'Roboto', sans-serif;"">
       <br>
       <br>
-      <hr style="border-top: 1px solid #000; width: 50%">
+      <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
       <br>
       <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 2</span></h1></p>
       <br>
-      <hr style="border-top: 1px solid #000; width: 50%">
+      <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
       <br>
       <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400"><strong>Liderazgo Femenino I+D+i+e</strong><br>
       Los reportes estadísticos correspondientes a este ítem, guardan relación con el 
@@ -21,16 +21,17 @@
       <br>
       <hr style="border-top: 1px solid #000"> 
       <br>
-      <p class="responsive-text" style="text-align: center"><strong>Evolución en el área de investigación de publicaciones 2022-2023</strong></p>
       <div class="container dark:bg-indigo-400">
         <div class="row">
           <div class="col-md-8">
+            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400" style="text-align: center"><strong>Evolución en el área de investigación de publicaciones 2022-2023</strong></p>  
+            <br>
             {{ chart|safe }}
+            <p style="text-align: center" class="text-xs font-normal text-gray-500 lg:text-xl dark:text-gray-400"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
+              de la Universidad de La Frontera 2022-2023.</em></p>
           </div>
         </div>  
       </div>
-      <p style="text-align: center" class="responsive-text"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
-        de la Universidad de La Frontera 2022-2023.</em></p>
       <br>
       <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
         El área de investigación de las publicaciones académicas resulta de las definiciones 
@@ -51,16 +52,15 @@
       <br>
       <hr>
       <br>
-      <p class="responsive-text" style="text-align: center"><strong>Evolución de Liderazgo en Publicaciones Científicas (2020-2023)</strong></p>
-      <div class="container">
         <div class="row">
           <div class="col-md-6">
+            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400" style="text-align: center"><strong>Evolución de Liderazgo en Publicaciones Científicas (2020-2023)</strong></p>
+            <br>
             {{ chart2|safe }}
+            <p style="text-align: center" class="text-xs font-normal text-gray-500 lg:text-xl dark:text-gray-400"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
+              de la Universidad de La Frontera 2022-2023.</em></p>
           </div>
         </div>  
-      </div>
-      <p style="text-align: center" class="responsive-text"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
-        de la Universidad de La Frontera 2022-2023.</em></p>
       <br>
       <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
           Las publicaciones lideradas en la Universidad de La Frontera para el período 2020-2023, 
@@ -82,16 +82,17 @@
       <br>
       <hr>
       <br>
-      <p class="responsive-text" style="text-align: center"><strong>Evolución Proyectos de Innovación y Transferencia Tecnológica (2022-2023)</strong></p>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-8">
-            {{ chart3|safe }}
+          <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400"" style="text-align: center"><strong>Evolución Proyectos de Innovación y Transferencia Tecnológica (2022-2023)</strong></p>
+          <br>  
+          {{ chart3|safe }}
+          <p style="text-align: center" class="text-xs font-normal text-gray-500 lg:text-xl dark:text-gray-400"><em>Fuente: Elaboración propia, a partir de la base de datos Unidad de
+        Transferencia Tecnológica de la Universidad de La Frontera 2020-2023.</em></p>
           </div>
         </div>  
       </div>
-      <p style="text-align: center" class="responsive-text"><em>Fuente: Elaboración propia, a partir de la base de datos Unidad de
-        Transferencia Tecnológica de la Universidad de La Frontera 2020-2023.</em></p>
       <br>
       <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
         Los Proyectos de Innovación y Transferencia Tecnológica refieren a aquellos proyectos adjudicados 
