actualización modo dark

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -4,12 +4,10 @@
 {% load static %}
 {% include 'banner_home.html' %}
 <div class="container-lg dark:bg-indigo-950 dark:text-white">
-  {% comment %} <div class="container" style="width: 85%; height: auto; background-color: #ffffff">
-    <div class="container px-5" style="font-family: 'Roboto', sans-serif; font-size: 20px; color: #4d4d4d; font-weight: 300"> {% endcomment %}
   <br>
   <br>
   <br>
-  <p class="text-xl text-align-left text-gray-500 lg:text-xl dark:text-gray-400">
+  <p class="text-xl text-zinc-950 lg:text-xl dark:text-white">
     El Observatorio de Género y Ciencia de la Universidad de La Frontera tiene<br> 
     como objetivo principal aportar al desarrollo de capacidades institucionales<br>
     a través del monitoreo de las acciones de transversalización del enfoque de<br>
@@ -30,7 +28,7 @@
   <br>
   <br>
 </div>
-<div class="container-fluid p-0 m-0 relative">
+<div class="container-fluid p-0 m-0">
   <img src="{% static 'img/superbanner_home.jpg' %}" class="w-full h-auto" alt="Responsive image" />
 </div>   
 {% endblock %}   
