--- a/static/css/style_base.css
+++ b/static/css/style_base.css
@@ -1,29 +1,3 @@
-/* 
-.card {
-    margin-bottom: 20px;
-    color: #005fab;
-    background-color: #fff; 
-    border-color: #005fab !important; 
-}
-
-.card:hover {
-    background-color: indigo!important; 
-    color: #fff; 
-}
-
-.btn {
-    background-color: #fff !important; 
-    border-color: #005fab !important;
-    color: #005fab !important; 
-    text-decoration: none;
-}
-
-.btn:hover {
-    background-color: #fff !important; 
-    border-color: #005fab !important; 
-    color: #005fab !important; 
-    text-decoration: none;
-} */
 
 .responsive-text {
     font-size: 22px;
@@ -33,21 +7,15 @@
     width: 70%;
 }
 
-.uk-navbar-container {
+/* .uk-navbar-container {
     background-color: #fff!important;
-}
+} */
 
 nav li {
     display: inline-block; /* Muestra los elementos de la lista como bloques en línea */
     margin: 0 10px; /* Agrega espacio entre elementos de la lista */
 }
 
-nav li a {
-    color: #005fab!important; /* Color de la tipografía */
-    text-decoration: none; /* Elimina el subrayado predeterminado */
-    font-family: 'Roboto', sans-serif; /* Familia de fuentes */
-    font-size: 14px; /* Tamaño de la fuente */
-}
 
 em {
     color: inherit; /* O cualquier otro color deseado */
