--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -26,31 +26,16 @@
 {% bootstrap_messages %}{% tailwind_css %}
 
     <title>Observatorio Género y Ciencia</title>
-
-    {% comment %} <script>
-        // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-        if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-            document.documentElement.classList.add('dark');
-        } else {
-            document.documentElement.classList.remove('dark')
-        }
-    </script>  {% endcomment %}
     
 </head>
+
 <body class="bg-indigo-200 dark:bg-indigo-950">
 
-<!-- Alerta -->
-<div class="md:container md:mx-auto p-0 m-0 text-center bg-indigo-400 dark:bg-indigo-950" style="color: #4d4d4d;">
-  <div style="height: 5px;"></div>
-  Observatorio de género y ciencia UFRO en desarrollo
-  <div style="height: 5px;"></div>
-</div>
-
 {% block navbar %}
-    <!-- NavBar Menu background-color: #d4d4d4!important-->
+    <!-- NavBar Menú -->
     <header class="fixed w-full z-50 left-0 right-0 top-0">
-        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 dark:text-white border-gray-200 px-4 lg:px-6 py-2.5">
-            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+        <nav class="shadow-lg bg-indigo-400 dark:bg-indigo-950 dark:text-white text-zinc-950 border-gray-200 px-4 lg:px-6 py-2.5">
+            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl text-zinc-950">
                 <a href="#" class="flex items-center" style="text-decoration: none;">
                     <img src="{% static 'img/logo_ines.png' %}" class="brightness-125 mr-3 h-6 sm:h-9" alt="InES Género Logo" />
                     <span class="self-center text- font-semibold whitespace-nowrap dark:text-white">Observatorito<br>Género y Ciencia</span>
@@ -79,14 +64,14 @@
                         </span>
                     </button>
                 </div>
-                <div class="hidden justify-between w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
-                    <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+                <div class="hidden justify-between w-full lg:flex lg:w-auto lg:order-1 text-zinc-950" id="mobile-menu-2">
+                    <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950 dark:text-white">
                         <li>
-                            <a href="/" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700" style="text-decoration: none;">Inicio</a>
+                            <a href="/" class="block py-2 pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 lg:dark:hover:bg-transparent" style="text-decoration: none; color: #b4c6fc">Inicio</a>
                         </li>
                         <!--Dropdown-->
                         <li>
-                            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-indigo-400 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-indigo-950 md:dark:hover:bg-transparent"><a href="{% url 'lineas_accion' %}" style="text-decoration: none;">Lineas de Acción&nbsp;</a>&nbsp;&nbsp;<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-indigo-400 md:hover:bg-transparent md:border-0 md:hover:text-zinc-950 md:p-0 md:w-auto dark:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-indigo-950 md:dark:hover:bg-transparent"><a href="{% url 'lineas_accion' %}" style="text-decoration: none;">Lineas de Acción&nbsp;</a>&nbsp;&nbsp;<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                   </svg></button>
                             <!-- Dropdown menu -->
@@ -96,7 +81,7 @@
                                     <a href="{% url 'lineas_accion_1' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Acciones con Perspectiva de Género</a>
                                   </li>
                                   <li>
-                                    <a href="{% url 'lineas_accion_2' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Liderazgo Femenini I+D+i+e</a>
+                                    <a href="{% url 'lineas_accion_2' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Liderazgo Femenino I+D+i+e</a>
                                   </li>
                                   <li>
                                     <a href="{% url 'lineas_accion_3' %}" class="no-underline block px-4 py-2 dark:hover:text-white" style="text-decoration: none;">Financiamiento y Patrocinio I+D+i+e</a>
@@ -200,9 +185,6 @@
 {% endblock navbar %}
 
 {% block content %}
-
-
-
 {% endblock %}
 
 {% include "footer.html" %}
@@ -210,8 +192,6 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.19.2/dist/js/uikit-icons.min.js"></script>
-
-<script src="stylesheet" href="{% static 'js/darkModeToggle.js' %}" ></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
