--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -1,12 +1,12 @@
 {% load static %}
-<footer class="bg-indigo-400 dark:bg-indigo-950 shadow">
+<footer class="bg-indigo-400 dark:bg-indigo-950 dark:text-white shadow">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse" style="text-decoration: none;">
                 <img src="{% static 'img/logo_ines.png' %}" class="h-8" alt="Flowbite Logo" />
-                <span class="self-center text-2xl text-gray-500 font-semibold whitespace-nowrap">Observatorio<br>Género y Ciencia</span>
+                <span class="self-center text-2xl text-zinc-950 dark:text-white font-semibold whitespace-nowrap">Observatorio<br>Género y Ciencia</span>
             </a>
-            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0" style="text-decoration: none;">
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-semibold text-zinc-950 dark:text-white sm:mb-0" style="text-decoration: none;">
                 <li>
                     <a href="/" class="me-4 md:me-6" style="text-decoration: none;">Inicio</a>
                 </li>
@@ -21,8 +21,8 @@
                 </li>
             </ul>
         </div>
-        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center">© Observatorio Género y Ciencia 2024, Universidad de La Frontera<br>Todos los derechos reservados</span>
+        <hr class="my-6 border-gray-200 dark:text-white sm:mx-auto lg:my-8" />
+        <span class="block text-sm text-center text-zinc-950 dark:text-white sm:text-center">© Observatorio Género y Ciencia 2024, Universidad de La Frontera<br>Todos los derechos reservados</span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
               <a href="https://www.linkedin.com/in/generoencienciaufro/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40">
