--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -7,25 +7,24 @@
 <div class="container-lg dark:bg-indigo-950 dark:text-white">  
   <br>    
   <br>
-  <div class="container mx-auto px-5">
   <br>
   <br>
   <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
   <br>
-  <p style="color: #005fab; font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1></p>
+  <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Líneas <br>de Acción</span></h1>
   <br>
   <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
   <br>
-  <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
+  <p class="text-lg font-normal text-zinc-950 lg:text-xl dark:text-white">
     El observatorio de Género y Ciencia agrupa el total de los indicadores en Líneas
     de Acción con el fin de monitorearlos de forma ordenada permitiendo así, una
-    correcta y eficiente sistematización, análisis y reporte de las actividades a
+    correcta y eficiente sistematización, análisis y reporte de las actividades
     a cumplir por las distintas Unidades de la Universidad de La Frontera.
   </p>
+<br>
+<br>
 </div>
-<br>
-<br>
-    <div class="container-lg px-5">
+    <div class="container-lg px-5 dark:bg-indigo-950">
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <!-- primera fila -->
           <div class="col"> 
