--- a/theme/templates/lineas_accion_1.html
+++ b/theme/templates/lineas_accion_1.html
@@ -7,11 +7,12 @@
     <br>
     <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
-    <p style="font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea <br>de Acción 1</span></h1></p>
+    <p style="font-weight: 300" class="responsive-text"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-zinc-950 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea <br>de Acción 1</span></h1></p>
     <br>
     <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
-    <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400"><strong>Acciones con perspectiva de género</strong><br>
+    <p class="text-lg font-normal text-zinc-950 lg:text-xl dark:text-white"><strong>Acciones con perspectiva de género</strong><br>
+    <br>
         Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
         en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
         conclusiones referentes a la utilidad de los resultados por género, escritura con lenguaje sensible 
