--- a/theme/templates/lineas_accion_3.html
+++ b/theme/templates/lineas_accion_3.html
@@ -5,31 +5,47 @@
 <div class="container-lg dark:bg-indigo-950 dark:text-white" style="font-family: 'Roboto', sans-serif;">
     <br>
     <br>
+    <hr style="border-top: 1px solid; width: 50%;" class="dark:text-white">
+    <br>
+    <h1 class="animate-pulse mb-4 text-3xl font-extrabold text-zinc-950 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 3</span></h1>
+    <br>
     <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
     <br>
-    <p style="font-weight: 300"><h1 class="animate-pulse mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Línea<br>de Acción 3</span></h1></p>
+    <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: left">Financiamiento y Patrocinio I+D+i+e<br></p>
     <br>
-    <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
-    <br>
-    <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400" style="text-align: left"><strong>Financiamiento y Patrocinio I+D+i+e</strong><br>
-    Los indicadores correspondientes a este ítem, hacen referencia a los montos en el 
-    financiamiento y patrocinio adjudicados en el área de I+D+i+e.    
+    <p class="text-lg font-thin text-zinc-950 lg:text-xl dark:text-white">
+        Los indicadores correspondientes a este ítem, hacen referencia a los montos en el 
+        financiamiento y patrocinio adjudicados en el área de I+D+i+e.    
     </p>
     <br>
-    <hr style="border-top: 1px solid #000"> 
-    <br>    
-    <div class="container-fluid">
+    <hr style="border-top: 1px solid;" class="dark:bg-white">     
+    <div class="container">
         <div class="row">
             <div class="col-md-8">
-            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 text-center"><strong>Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</strong></p>
+            <br>
+            <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white text-center">Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</p>
             <br>
             {{ chart|safe }}
-            <p style="text-align: center" class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 text-center"><em>
+            <p style="text-align: center" class="text-lg font-thin text-zinc-950 lg:text-xl dark:text-white text-center"><em>
                 Fuente: Elaboración propia, a partir de las bases de datos de ANID 
                 Proyectos (bdh_proyectos_2003_2022 y bdh_proyectos_2003_2023)
             </em></p>
             </div>
-        </div>  
+        </div>
+        <br>
+        <hr style="border-top: 1px solid #000">
+        <div class="row">
+            <div class="col-md-8">
+            <br>
+            <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución del Monto Total de Financiamiento Fondef, según sexo y año (2020-2023).</p>
+            <br>
+            {{ chart2|safe }}
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>
+                Fuente: Elaboración propia, a partir de la base de datos ANID Proyectos 
+                (bdh_proyectos_2003_2022 y bdh_proyectos_2023_2032).
+            </em></p>
+            </div>
+        </div>    
     </div>
     <br>
     <br>
