--- a/theme/templates/lineas_accion_2.html
+++ b/theme/templates/lineas_accion_2.html
@@ -30,7 +30,7 @@
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución en el área de investigación de publicaciones 2022-2023</p>  
             <br>
             {{ chart|safe }}
-            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
               de la Universidad de La Frontera 2022-2023.</em></p>
           </div>
         </div>  
@@ -60,7 +60,7 @@
             <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución de Liderazgo en Publicaciones Científicas (2020-2023)</p>
             <br>
             {{ chart2|safe }}
-            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de Productividad Científica 
+            <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
               de la Universidad de La Frontera 2022-2023.</em></p>
           </div>
         </div>  
