--- a/theme/templates/lineas_accion_3.html
+++ b/theme/templates/lineas_accion_3.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-8">
             <br>
-            <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución del Monto Total de Financiamiento Fondef, según sexo y año (2020-2023).</p>
+            <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución del Monto Total de Financiamiento Fondef ($), según sexo y año (2020-2023).</p>
             <br>
             {{ chart2|safe }}
             <p style="text-align: center" class="text-xs font-thin text-zinc-950 lg:text-xl dark:text-white"><em>
