--- a/theme/templates/lineas_accion_4.html
+++ b/theme/templates/lineas_accion_4.html
@@ -31,6 +31,19 @@
             </div>
         </div>  
     </div>
+    <br>
+    <hr style="border-top: 1px solid #000;">
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+            <p class="text-lg font-bold text-center text-zinc-950 lg:text-xl dark:text-white">Porcentaje de tipos de académicos acreditados 2023, según total programas de postgrado</p>
+            <br>
+            {{ chart2|safe }}
+            <p class="text-xs text-center font-thin text-zinc-950 lg:text-xl dark:text-white"><em>Fuente: Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera.</em></p>
+            </div>
+        </div>  
+    </div>
     {% comment %} <p class="responsive-text" style="text-align: center"><strong>Evolución del porcentaje en el área de investigación del monto financiamiento FONDEF, según sexo y año (2022-2023)</strong></p>
     <div class="container-fluid">
         <div class="row">
